--- a/templates/all-equipment.html
+++ b/templates/all-equipment.html
@@ -173,7 +173,7 @@
                                     <br><br>  
                                     <h1>All Equipment</h1>
                                     <br><br>  
-                                <form action="submit.php">
+                                <form action="submit/">
                                     <div class="table-responsive">
                                         <table class="text-white table table-active table-bordered">
                                           <thead>
