--- a/templates/all-project.html
+++ b/templates/all-project.html
@@ -174,7 +174,7 @@
                                     <br><br>  
                                     <h1>All Project</h1>
                                     <br><br>  
-                                <form action="submit.php">
+                                <form action="submit/">
                                     <input class="display-none" type="text" value="" name="" id="input_value">
                                     <button class="display-none" type="submit" id="submit_button"></button>
                                     <div class="table-responsive">
