--- a/templates/create-project.html
+++ b/templates/create-project.html
@@ -187,7 +187,7 @@
                                     </ul>
                                     <br><br>
                                     
-                                    <form action="submit.php">
+                                    <form action="submit/">
                                         <div class="tab-content">
                                             <div id="project" class="container tab-pane active"><br>
                                                 <h3>Project</h3><br><br>
