--- a/templates/edit-project-pid.html
+++ b/templates/edit-project-pid.html
@@ -174,7 +174,7 @@
                                     <br><br>  
                                     <h1>Create Project</h1>
                                     <br><br>  
-                                    <form action="submit.php">
+                                    <form action="submit/">
                                         <div class="form-group row">                  
                                             <div class="col">
                                                 <label class="" for="project_tittle">Project Tittle</label>
