--- a/templates/register.html
+++ b/templates/register.html
@@ -174,7 +174,7 @@
                                     <br><br>  
                                     <h1>Register</h1>
                                     <br><br>  
-                                <form action="submit.php">
+                                <form action="submit/">
                                     <img class="img-fluid rounded-circle" src="img/avatar.png" alt="avatar" width="100" height="100"> 
                                     <br><br>
 
