--- a/templates/add-equipment.html
+++ b/templates/add-equipment.html
@@ -174,7 +174,7 @@
                                     <br><br>  
                                     <h1>Add Equipment</h1>
                                     <br><br>  
-                                    <form action="submit.php">
+                                    <form action="submit/">
                                         <div class="form-group row">
                                             <div class="col">
                                                 <label class="" for="site">Site</label>
