--- a/templates/edit-equipment-eid.html
+++ b/templates/edit-equipment-eid.html
@@ -174,7 +174,7 @@
                                     <br><br>  
                                     <h1>Edit Equipment</h1>
                                     <br><br>  
-                                    <form action="submit.php">
+                                    <form action="submit/">
                                         <div class="form-group row">
                                             <div class="col-lg-4">
                                                 <label class="text-white" for="aperture">Aperture</label>
