--- a/STARS/templates/register.html
+++ b/STARS/templates/register.html
@@ -189,7 +189,7 @@
                                         </div>
                                         <div class="col">
                                             <label class="text-white" for="name">Name</label>
-                                            <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                            <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                                         </div>
                                     </div>
 
@@ -206,7 +206,7 @@
                                     <div class="form-group row has-feedback">
                                         <div class="col">
                                             <label class="text-white" for="title">Title</label>
-                                            <input type="email" class="form-control" id="title" name="title" placeholder="Your Title">
+                                            <input type="text" class="form-control" id="title" name="title" placeholder="Your Title">
                                         </div>
                                         <div class="col">
                                             <label class="text-white" for="country">Country</label>
