--- a/STARS/templates/register.html
+++ b/STARS/templates/register.html
@@ -196,7 +196,7 @@
                                     <div class="form-group row has-feedback">
                                         <div class="col">
                                             <label class="text-white" for="email">Email</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                            <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
                                         </div>
                                         <div class="col">
                                             <label class="text-white" for="affiliation">Affiliation</label>
