--- a/STARS/templates/login.html
+++ b/STARS/templates/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +20,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="{% static 'css/sb-admin-2.css' %}" rel="stylesheet">
 
 </head>
 
@@ -174,7 +176,7 @@
                                     <br><br>  
                                     <h1>Log In</h1>
                                     <br><br>  
-                                <form action="login.php">
+                                <form action="/login/submit" method="post">
                                     <img class="img-fluid rounded-circle" src="img/avatar.png" alt="avatar" width="100" height="100"> 
                                     <br><br>
 
