--- a/STARS/templates/login.html
+++ b/STARS/templates/login.html
@@ -185,8 +185,8 @@
 
                                     <div class="form-group row">
                                         <div class="col">
-                                            <label class="text-white" for="email">Email</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                            <label class="text-white" for="username">Username</label>
+                                            <input type="text" class="form-control" id="username" name="username" placeholder="Your Username">
                                         </div>
                                         <div class="col">
                                             <label class="text-white" for="password">Passwords</label>
