--- a/STARS/templates/register.html
+++ b/STARS/templates/register.html
@@ -127,7 +127,7 @@
                             <a href="register.html" class="nav-link dropdown-toggle">Register</a>
                         </li>
                         <li class="nav-item dropdown no-arrow">
-                            <a href="login.html" class="nav-link dropdown-toggle">Log In</a>
+                            <a href="login" class="nav-link dropdown-toggle">Log In</a>
                         </li>
                         <li class="nav-item dropdown no-arrow">
                             <a href="profile.html" class="nav-link dropdown-toggle">
