--- a/STARS/templates/login.html
+++ b/STARS/templates/login.html
@@ -190,7 +190,7 @@
                                         </div>
                                         <div class="col">
                                             <label class="text-white" for="password">Passwords</label>
-                                            <input type="password"  class="form-control" id="password" placeholder="Your Passwords">
+                                            <input type="password"  class="form-control" id="password" name="password" placeholder="Your Passwords">
                                         </div>
                                     </div>                                    
                                     <div class="form-group row">
