--- a/STARS/templates/home.html
+++ b/STARS/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -121,43 +123,21 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
-
-                        <!-- <div class="topbar-divider d-none d-sm-block"></div> -->
-
-                        <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline">Admin</span>
-                                <img class="img-profile rounded-circle"
-                                    src={% static "img/avatar.png" %}>
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="profile">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <div class="dropdown-divider"></div>
-
-                                <a class="dropdown-item" href="register">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Register
-                                </a>
-                                <div class="dropdown-divider"></div>
-
-                                <a class="dropdown-item" href="login">
-                                    <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Log In
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="login">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Log Out
-                                </a>
-                            </div>
+                            <a href="register" class="nav-link dropdown-toggle">Register</a>
                         </li>
+                        <li class="nav-item dropdown no-arrow">
+                            <a href="login" class="nav-link dropdown-toggle">Log In</a>
+                        </li>
+                        <li class="nav-item dropdown no-arrow">
+                            <a href="profile" class="nav-link dropdown-toggle">
+                                <span class="mr-2 d-none d-lg-inline">{{request.user}}</span>
+                                <img class="img-profile rounded-circle"
+                                    src="{% static '/img/avatar.png' %}">
+                            </a>
+                        </li>
+
+                        
 
                     </ul>
 
@@ -170,6 +150,10 @@
                         <div class="col-12">
                             <div class="p-5">
                                 <div class="text-center">
+                                    {% for project in project_list %}
+                                    <p>{{ project }}</p>
+                                        
+                                    {% endfor %}
                                     <div id="demo" class="carousel slide" data-ride="carousel">
                                         <ul class="carousel-indicators">
                                           <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -180,7 +164,7 @@
                                             
                                           <div class="carousel-item active">
                                             <a href="join-project">
-                                              <img src="img/bryan-goff-RF4p4rTM-2s-unsplash-2.jpg" alt="Project" width="100%" height="100%">
+                                              <img src="{% static 'img/bryan-goff-RF4p4rTM-2s-unsplash-2.jpg' %}" alt="Project" width="100%" height="100%">
                                             <div class="carousel-caption">
                                             
                                               <h1>Project</h1>
@@ -246,4 +230,4 @@
 </body>
 
 </html>
-<script src="js/main.js"></script>
+<script src="{% static 'js/main.js' %}"></script>
