--- a/STARS/templates/home.html
+++ b/STARS/templates/home.html
@@ -166,7 +166,7 @@
                                           <div class="form-group row">
                                             <div class="col-4"></div>
                                           <div class="col-4">
-                                            <a class="btn btn-outline-light btn-block" href="register">Info
+                                            <a class="btn btn-outline-light btn-block" href="project-info-target?pid={{ project.pid }}">Info
                                             </a>
                                           </div>       
                                         </div>
