--- a/STARS/templates/home.html
+++ b/STARS/templates/home.html
@@ -127,6 +127,7 @@
                             <a href="register" class="nav-link dropdown-toggle">Register</a>
                         </li>
                         <li class="nav-item dropdown no-arrow">
+
                             <a href="login" class="nav-link dropdown-toggle">Log In</a>
                         </li>
                         <li class="nav-item dropdown no-arrow">
@@ -166,7 +167,7 @@
                                           <div class="form-group row">
                                             <div class="col-4"></div>
                                           <div class="col-4">
-                                            <a class="btn btn-outline-light btn-block" href="project-info-target?pid={{ project.pid }}">Info
+                                            <a class="btn btn-outline-light btn-block" href="home/project-info-target?pid={{ project.pid }}">Info
                                             </a>
                                           </div>       
                                         </div>
