--- a/STARS/templates/not_use/cards.html
+++ b/STARS/templates/not_use/cards.html
@@ -587,7 +587,7 @@
     <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="{% 'js/sb-admin-2.min.js' %}"></script>
+    <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
 </body>
 
