--- a/STARS/templates/progress-bar.html
+++ b/STARS/templates/progress-bar.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,13 +12,13 @@
     <title>STAR</title>
 
     <!-- Custom fonts for this template-->
-    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="{% static 'css/sb-admin-2.css' %}" rel="stylesheet">
+    <link href="css/sb-admin-2.css" rel="stylesheet">
 
 </head>
 
@@ -33,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/home">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <!-- <i class="fas fa-laugh-wink"></i> -->
                 </div>
@@ -45,58 +43,64 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="/home">
+                <a class="nav-link" href="index.html">
                     <i class="fa fa-home"></i>
                     <span>Home</span></a>
             </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider">
+
+            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="/join-project">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Join Project</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/manage-project">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Manage Project</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/create-project">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Create Project</span></a>
+                    <span>Project</span>
+                </a>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Project Management</h6>
+                        <a class="collapse-item" href="my-project.html">My Project</a>
+                        <a class="collapse-item" href="all-project.html">All Project</a>
+                        <a class="collapse-item" href="create-project.html">Create Project</a>
+                    </div>
+                </div>
             </li>
             <hr class="sidebar-divider">
-            <li class="nav-item">
-                <a class="nav-link" href="/equipment">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Equipment</span></a>
-            </li>
 
+            <!-- Nav Item - Utilities Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                    aria-expanded="true" aria-controls="collapseUtilities">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Equipment</span>
+                </a>
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Equipment Management</h6>
+                        <a class="collapse-item" href="my-equipment.html">My Equipment</a>
+                        <a class="collapse-item" href="all-equipment.html">All Equipment</a>
+                        <a class="collapse-item" href="add-equipment.html">Add Equipment</a>
+                    </div>
+                </div>
+            </li>
             <hr class="sidebar-divider">
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="/schedule">
+                <a class="nav-link" href="schedule.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Schadule</span></a>
             </li>
             <hr class="sidebar-divider">
-
-            <li class="nav-item">
-                <a class="nav-link" href="/relation">
-                    <i class="fas fa-project-diagram"></i>
-                    <span>Relation</span></a>
-            </li>
-            <hr class="sidebar-divider">
-
+            
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <br><br>
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
-
 
         </ul>
         <!-- End of Sidebar -->
@@ -109,7 +113,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow fixed-top">
-                    <a class="navbar-brand text-center text-white" href="/home">STAR</a>
+                    <a class="navbar-brand text-center text-white" href="index.html">STAR</a>
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
@@ -117,25 +121,44 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
+
+                        <!-- <div class="topbar-divider d-none d-sm-block"></div> -->
+
+                        <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                            <a href="/register" class="nav-link dropdown-toggle">Register</a>
-                        </li>
-                        {% if request.session.username %}
-                        <li class="nav-item dropdown no-arrow">
-                            <a href="/logout" class="nav-link dropdown-toggle">Log Out</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item dropdown no-arrow">
-                            <a href="/login" class="nav-link dropdown-toggle">Log In</a>
-                        </li>
-                        {% endif %}
-                        <li class="nav-item dropdown no-arrow">
-                            <a href="/profile" class="nav-link dropdown-toggle">
-                                <span class="mr-2 d-none d-lg-inline">{{ request.session.username }}</span>
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="mr-2 d-none d-lg-inline">Admin</span>
                                 <img class="img-profile rounded-circle"
-                                    src="{% static '/img/avatar.png' %}">
+                                    src="img/avatar.png">
                             </a>
-                        </li>                        
+                            <!-- Dropdown - User Information -->
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                                aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="profile.html">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Profile
+                                </a>
+                                <div class="dropdown-divider"></div>
+
+                                <a class="dropdown-item" href="register.html">
+                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Register
+                                </a>
+                                <div class="dropdown-divider"></div>
+
+                                <a class="dropdown-item" href="login.html">
+                                    <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Log In
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="login.html">
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Log Out
+                                </a>
+                            </div>
+                        </li>
+
                     </ul>
 
                 </nav>
@@ -149,7 +172,7 @@
                             <div class="p-5">
                                 <div class="text-center text-white">
                                     <br><br>  
-                                    <h1>Project Info Target</h1>
+                                    <h1>Create Project</h1>
                                     <br><br>  
                                     <ul class="nav nav-tabs" role="tablist">
                                         <li class="nav-item">
@@ -164,7 +187,7 @@
                                     </ul>
                                     <br><br>
                                     
-                                    <form action="submit/">
+                                    <form action="submit.php">
                                         <div class="tab-content">
                                             <div id="project" class="container tab-pane active"><br>
                                                 <h3>Project</h3><br><br>
@@ -310,7 +333,26 @@
                                                     </select>
                                                 </div>
                                             </div>
-                                            
+                                            <div class="form-group row">
+                                                <div class="col">
+                                                    <label for="allow_join" class="">Allow Join</label>
+                                                    <select class="form-control" id="allow_join">
+                                                        <option>y</option>
+                                                        <option>n</option>
+                                                        <option>special_requirements</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col">
+                                                    <label for="progress" class="">Progress (%)</label>
+                                                    <input type="number" step="1"  class="form-control" id="progress" max=100 min=0 oninput="change_progress_bar()">               
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <br>
+                                                <div class="progress" style="height:30px">           
+                                                    <div class="progress-bar  progress-bar-striped progress-bar-animated" style="width:0%; height:30px" id="progress_bar"></div>
+                                                </div> 
+                                            </div>
 
                                             </div>
                                             <div id="target" class="container tab-pane fade"><br>
@@ -408,17 +450,16 @@
     </a>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
+    <script src="js/sb-admin-2.min.js"></script>
 
 </body>
 
 </html>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="js/main.js"></script>
