--- a/STARS/templates/project-info-target.html
+++ b/STARS/templates/project-info-target.html
@@ -166,16 +166,21 @@
                                         <div class="tab-content">
                                             <div id="project" class="container tab-pane active"><br>
                                                 <h3>Project</h3><br><br>
-                                              <div class="form-group row">                  
+                                              <div class="form-group row">
                                                 <div class="col">
-                                                    <label class="" for="project_tittle">Project Tittle</label>
-                                                    <input type="text"  class="form-control" id="project_tittle" placeholder="" value="{{ projectInfo.title }}" >
+                                                    <label class="" for="pid">PID</label>
+                                                    <input type="text"  class="form-control" id="pid" name="pid" placeholder="" value="{{ projectInfo.pid }}" readonly>
+                                                </div>
+
+                                                <div class="col">
+                                                    <label class="" for="tittle">Tittle</label>
+                                                    <input type="text"  class="form-control" id="tittle" placeholder="" value="{{ projectInfo.title }}" disabled>
                                                 </div>
                                             </div>
                                             <div class="form-group row">                  
                                                 <div class="col">
                                                     <label class="" for="project_description">Project Description</label>
-                                                    <input type="text"  class="form-control" id="project_description" placeholder="">
+                                                    <input type="text"  class="form-control" id="project_description" placeholder="" value="{{ projectInfo.description }}" disabled>
                                                 </div>
                                             </div>
                                             <div class="form-group row">
