--- a/STARS/templates/project-info-target.html
+++ b/STARS/templates/project-info-target.html
@@ -174,47 +174,43 @@
 
                                                 <div class="col">
                                                     <label class="" for="tittle">Tittle</label>
-                                                    <input type="text"  class="form-control" id="tittle" placeholder="" value="{{ projectInfo.title }}" disabled>
+                                                    <input type="text"  class="form-control" id="tittle" placeholder="" value="{{ projectInfo.title }}" readonly>
                                                 </div>
                                             </div>
                                             <div class="form-group row">                  
                                                 <div class="col">
                                                     <label class="" for="project_description">Project Description</label>
-                                                    <input type="text"  class="form-control" id="project_description" placeholder="" value="{{ projectInfo.description }}" disabled>
+                                                    <input type="text"  class="form-control" id="project_description" placeholder="" value="{{ projectInfo.description }}" readonly>
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <div class="col">
                                                     <label class="" for="project_type">Project Type</label>
-                                                    <select class="form-control" id="project_type">
+                                                    <select class="form-control" id="project_type" value="{{ projectInfo.project_type }}" readonly>
                                                         <option>regular</option>
                                                         <option>transient
                                                         </option>
                                                     </select>
                                                 </div>
-                                                <div class="col">
-                                                    <label class="" for="pi">PI</label>
-                                                    <input type="number" step="1" class="form-control" id="pi">
-                                                </div>
-                                            </div>                                    
+                                            </div>
                                             <div class="form-group row">
                                                 <div class="col">
                                                     <label class="" for="aperture_upper_limit">Aperture Upper Limit</label>
-                                                    <input type="number" step="1" class="form-control" id="aperture_upper_limit">
+                                                    <input type="number" step="1" class="form-control" id="aperture_upper_limit" value="{{ projectInfo.aperture_upper_limit }}" readonly>
                                                 </div>
                                                 <div class="col">
                                                     <label class="" for="aperture_lower_limit">Aperture Lower Limit</label>
-                                                    <input type="number" step="1" class="form-control" id="aperture_lower_limit">
+                                                    <input type="number" step="1" class="form-control" id="aperture_lower_limit" value="{{ projectInfo.aperture_lower_limit }}" readonly>
                                                 </div>          
                                             </div>
                                             <div class="form-group row">
                                                 <div class="col">
                                                     <label class="" for="fov_upper_limit">Fo V Upper Limit</label>
-                                                    <input type="number" step="100" class="form-control" id="fov_upper_limit">
+                                                    <input type="number" step="100" class="form-control" id="fov_upper_limit" value="{{ projectInfo.fov_upper_limit }}" readonly>
                                                 </div>
                                                 <div class="col">
                                                     <label class="" for="fov_lower_limit">Fo V Lower Limit</label>
-                                                    <input type="number" step="1" class="form-control" id="fov_lower_limit">
+                                                    <input type="number" step="1" class="form-control" id="fov_lower_limit" value="{{ projectInfo.fov_lower_limit }}" readonly>
                                                 </div>
                                             </div>   
                                             <div class="form-group row">
